--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "express": "^5.1.0",
     "mongoose": "^8.16.4",
     "nodemon": "^3.1.10"
